--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "drizzle:generate": "drizzle-kit generate",
     "drizzle:migrate": "drizzle-kit migrate",
-    "drizzle:studio": "drizzle-kit studio"
+    "drizzle:studio": "drizzle-kit studio",
+    "drizzle:seed": "node ./scripts/seeder.js",
+    "redoDB": "rm -rf ./src/db/migrations/; rm -rf ./.sqlite.db-journal; rm -rf ./.sqlite.db; yarn drizzle:generate; yarn drizzle:migrate; yarn drizzle:seed;"
   },
   "dependencies": {
     "@mantine/charts": "^7.12.2",
@@ -33,6 +35,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
